--- a/index.html
+++ b/index.html
@@ -1,12 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Hospital-Application/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="main">
+        <nav class="navigation">
+            <ul class="nav_left">
+                <li class="nav_logo">
+                    <a href="#"><img src="./images/mecare_logo.png" alt="Logo" /></a>
+                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Other Page</a></li>
+                <li><a href="#">Department</a></li>
+                <li><a href="#">Blog</a></li>
+                <li class="nav_right_try"><a href="#">Get a Quote</a></li>
+        </nav>
+        <div class="shade-div">
+            <div class="shade-div1">
+                <h1>500+</h1>
+                <p>Doctors at work</p>
+            </div>
+            <div class="shade-div2">
+                <h1>58796+</h1>
+                <p>Happy Patients</p>
+            </div>
+            <div class="shade-div3">
+                <h1>500+</h1>
+                <p>Medical Beds</p>
+            </div>
+            <div class="shade-div4">
+                <h1>200+</h1>
+                <p>Winning Awards</p>
+            </div>
+        </div>
+        <div class="department">
+            <div class="depart1">
+                <div class="depart11">
+                    <div class="icon-div1"></div>
+                    <div class="text"><h1>Pedlatric</h1>
+                    <p>Fusce eget condimentum lectus, sed commodo dui. Suspendisse non vehicula ant aecenas placerat finibus metus, at finibus neque.</p>
+                </div>
+                </div>
+                <div class="depart12">
+                    <div class="icon-div2"></div>
+                    <div class="text">
+                        <h1>Dental</h1>
+                        <p>Fusce eget condimentum lectus, sed commodo dui. Suspendisse non vehicula ant aecenas placerat finibus metus, at finibus neque.</p>
+                    </div>
+                </div>
+                <div class="depart13">
+                    <div class="icon-div3"></div>
+                    <div class="text">
+                        <h1>Physician</h1>
+                        <p>Fusce eget condimentum lectus, sed commodo dui. Suspendisse non vehicula ant aecenas placerat finibus metus, at finibus neque.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="depart2"></div>
+        </div>
+        <div class="our-team">
+            <h2>Our Team</h2>
+            <h1>Docter’s In The Medical Sciences</h1>
+            <p>Fusce pharetra odio in urna laoreet laoreet. Aliquam erat volutpat. Phasellus nec ligula arcu. Aliquam eu <br> urna pulvinar, iaculis ipsum in, porta massa.</p>
+        </div>
+        <div class="picture-grid">
+            <div class="picture-grid1"></div>
+            <div class="picture-grid2"></div>
+            <div class="picture-grid3"></div>
+        </div>
+        <div class="name-div">
+            <div class="name-div1">
+                <h1>Samanta Crane</h1>
+                <p>Internist General Practitioner</p>
+                <p>Working since 2004</p>
+            </div>
+            <div class="name-div2">
+                <h1>Ostin Green</h1>
+                <p>Internist General Practitioner</p>
+                <p>Working since 2004</p>
+            </div>
+            <div class="name-div3">
+                <h1>Norman Colins</h1>
+                <p>Sales Manager</p>
+                <p>Working since 2004</p>
+            </div>
+        </div>
+        <div class="banner-text">
+            <h2>Our Latest Blog</h2>
+            <h1>Stay Updated To Our Blog & News</h1>
+            <p>Fusce pharetra odio in urna laoreet laoreet. Aliquam erat volutpat. Phasellus nec ligula arcu. Aliquam eu <br> urna pulvinar, iaculis ipsum in, porta massa.</p>
+        </div>
+        <div class="footer">
+            <div class="left">
+              <img src="./images/mecare_logo.png" alt="logo" />
+              <br />
+              <p>
+                Nisi, purus vitae, ultrices nunc. Sit ac sit suscipit hendrerit.
+                Gravida massa volutpat aenean odio erat nullam fringilla.
+              </p>
+            </div>
+            <ul>
+              <li><h3>Quick LINKS</h3></li>
+              <br />
+              <li><a href="./index.html" class="nav-link">Home</a></li>
+              <li><a href="./index.html" class="nav-link">Services</a></li>
+              <li><a href="./index.html" class="nav-link">About Us</a></li>
+              <li><a href="./index.html" class="nav-link">Blogs</a></li>
+              <li><a href="./index.html" class="nav-link">Contact</a></li>
+            </ul>
+            
+            <div>
+              <h3>CONTACT US</h3>
+              <br />
+              <p>Do you have any queries or suggestions?</p>
+              <a href="./index.html" class="nav-link">yourinfo@gmail.com</a>
+              <br />
+              <p>If you need support? Just give us a call.</p>
+              <a href="./index.html" class="nav-link">+55 111 222 333 44</a>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <div>
+              <p>We Care:</p>
+              <img src="" alt="" />
+            </div>
+            <div>
+              <p>© Copyright 2024 Hospital Web Application</p>
+              <img src="" alt="" />
+            </div>
+          </div>
+        </footer>
+    </div>
 </body>
+
 </html>
